<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie_details.MovieDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/detailsCollapsingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/detailsBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_launcher"
                android:contentDescription="@null"
                android:scaleType="centerCrop" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/details_bg_top_layer"
                android:contentDescription="@null" />

            <ImageView
                android:id="@+id/detailsMovieImage"
                android:layout_width="@dimen/details_poster_width"
                android:layout_height="@dimen/details_poster_height"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/imdb_rate_margin_to_edge"
                android:layout_marginTop="@dimen/details_poster_margin_top"
                android:layout_marginBottom="@dimen/details_poster_margin_bottom"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:transitionName="@string/movie_poster_transition"
                app:layout_collapseMode="parallax"
                tools:src="@mipmap/ic_launcher" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detailsToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                android:gravity="center_vertical"
                app:layout_collapseMode="pin">


                <TextView
                    android:id="@+id/detailsRatingTV"
                    style="@style/ImdbBtnStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:layout_collapseMode="pin"
                    tools:text="7.8" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:padding="@dimen/margin_to_main_edge"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_texts"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/detailsOverviewTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/def_text_size"
                style="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="aopscmancapncpowncowncpopaomc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginTop="@dimen/margin_between_texts"
                android:text="@string/genres" />

            <TextView
                android:id="@+id/detailsGenresTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/def_text_size"
                style="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk" />

            <TextView
                android:id="@+id/detailsDateTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginTop="@dimen/margin_between_texts"
                android:textSize="@dimen/def_text_size"
                tools:text="20 aug 2004" />


            <FrameLayout
                android:id="@+id/similarMoviesListContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_list_height"
                android:layout_marginTop="@dimen/margin_to_main_edge" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/reviewsLayout"
        layout="@layout/reviews_bottom_sheet_layout" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>